--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "dotenv-cli": "^10.0.0",
     "embla-carousel-react": "^8.6.0",
